--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -47,9 +47,8 @@ We implemented both versions of the MAC model using PyTorch (v0.4.0)~\cite{paszk
 We report the obtained scores in \tableref{results}. The evaluation of MAC on CLEVR yields an accuracy of 96.2\%, obtained after 31.9h of training, and is taken as a reference experiment. The training wall time is coherent with what is reported in the original paper (roughly 30h of training for 20 epochs).
 S-MAC reaches an accuracy of 95.3\% on CLEVR, which is close to the reference score. Moreover, it presents the advantage to train faster, as supported by the reductions in the number of parameters, showing a decrease of 10.5\% in wall time.
 
-Evaluating MAC on CoGenT shows that, like previous work \cite{johnson2017inferring, mascharka2018transparency}, the performance is worse on Condition B than Condition A after training only sing Condition A data. As \tableref{results} shows, the MAC model achieves 79.5\% accuracy on Condition B, and 96.9\% on Condition A. S-MAC obtains comparable performance (78.71\%)
-This point also holds true when training on CoGenT: not only does the simplified model trains faster, it also presents comparable performance when evaluated on both conditions. The scores obtained on both conditions are coherent with the ones of MAC, indicating that the simplifications did not hinder its generalization capability.
+Evaluating MAC on CoGenT shows that, like previous work \cite{johnson2017inferring, mascharka2018transparency}, the performance is worse on Condition B than Condition A after training only sing Condition A data. As \tableref{results} shows, the MAC model achieves 79.5\% accuracy on Condition B, and 96.9\% on Condition A. S-MAC obtains comparable performance (78.71\%), and still maintains the shorter training time. The comparable performance indicate that the simplifications did not hinder its generalization capability.
 
-Following (\cite{johnson2017inferring}, \cite{perez2017film}), we then fine-tune both models using 3k images and 30k questions from the Condition B data (for 10 epochs), and re-evaluate them on both conditions. This enables both models to perform much better on CoGenT-B, as we observe a 15 points increase for the accuracy. Performance on CoGenT-A is slightly worse, dropping of ~4\%. This indicates that MAC is able to learn new combinations of shape \& color without forgetting the ones it learned during the initial training.
+Following \cite{johnson2017inferring, perez2017film}), we then fine-tune both models using 3k images and 30k questions from the Condition B data (for 10 epochs), and re-evaluate them on both conditions. This enables both models to perform much better on CoGenT-B, as we observe a 15 points increase for the accuracy. Performance on CoGenT-A is slightly worse, dropping of ~4\%. This seems to indicate that MAC is able to learn new combinations of shape \& color without forgetting the ones it learned during the initial training.
 
-Additionally, we have been able to diagnose interesting cases of failure on CoGenT-B. Please refer to Appendix B for more details.
+Nonetheless, MAC does not appear to separate the concepts of shape and color. We have analyzed cases of failure of MAC on CoGenT-B, which illustrate this point. Please refer to Appendix C for more details.
